--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.5",
-    "@angular/forms": "~11.0.5",
-    "@angular/platform-browser": "~11.0.5",
-    "@angular/platform-browser-dynamic": "~11.0.5",
-    "@angular/router": "~11.0.5",
+    "@angular/animations": "~12.1.0-next.2",
+    "@angular/forms": "~12.1.0-next.2",
+    "@angular/platform-browser": "~12.1.0-next.2",
+    "@angular/platform-browser-dynamic": "~12.1.0-next.2",
+    "@angular/router": "~12.1.0-next.2",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "angular": "^1.8.2",
@@ -26,12 +26,12 @@
     "rxjs": "~6.6.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.15",
-    "@angular/cli": "^11.0.7",
-    "@angular/common": "^12.0.1",
-    "@angular/compiler": "^12.0.1",
-    "@angular/compiler-cli": "^12.0.1",
-    "@angular/core": "^12.0.1",
+    "@angular-devkit/build-angular": "^12.1.0-next.2",
+    "@angular/cli": "^12.1.0-next.2",
+    "@angular/common": "^12.1.0-next.2",
+    "@angular/compiler": "^12.1.0-next.2",
+    "@angular/compiler-cli": "^12.1.0-next.2",
+    "@angular/core": "^12.1.0-next.2",
     "@types/jasmine": "^3.7.4",
     "@types/node": "^12.20.13",
     "codelyzer": "^6.0.2",
@@ -46,7 +46,7 @@
     "ts-node": "~8.3.0",
     "tslib": "^1.14.1",
     "tslint": "~6.1.0",
-    "typescript": "^3.9.9",
-    "zone.js": "^0.11.4"
+    "typescript": "^4.2.4",
+    "zone.js": "~0.11.4"
   }
 }
